force-app/main/default/objects/NCMT_Des_Report__c/NCMT_Des_Report__c.object-meta.xml
<CustomObject>
    <description>For BI Table Data Transfer - DES Summary Report D</description>
    <label>NCMT Des Report</label>
    <nameField>
        <displayFormat>D-{0000000}</displayFormat>
        <label>NCMT_Des_Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT Des Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>