force-app/main/default/objects/NCMT_Des_Report__c/fields/Level_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Name__c</fullName>
    <label>Level 1 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>