force-app/main/default/objects/NCMT_Des_Report__c/fields/Level_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Name__c</fullName>
    <label>Level 2 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>