force-app/main/default/objects/NCMT_Des_Report__c/fields/LEVEL_4__c.field-meta.xml
<CustomField>
    <fullName>LEVEL_4__c</fullName>
    <defaultValue>0</defaultValue>
    <label>LEVEL 4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>