force-app/main/default/objects/NCMT_Des_Report__c/fields/Percent__c.field-meta.xml
<CustomField>
    <fullName>Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Percent</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>