force-app/main/default/objects/NCMT_Des_Report__c/fields/Project_Total__c.field-meta.xml
<CustomField>
    <fullName>Project_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Project Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>