force-app/main/default/objects/NCMT_Des_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Division_Name__c</columns>
    <columns>Division_Description__c</columns>
    <columns>Level_1_Name__c</columns>
    <columns>LEVEL_1__c</columns>
    <columns>Level_2_Name__c</columns>
    <columns>LEVEL_2__c</columns>
    <columns>Level_3_Name__c</columns>
    <columns>LEVEL_3__c</columns>
    <columns>Level_4_Name__c</columns>
    <columns>LEVEL_4__c</columns>
    <columns>Level_5_Name__c</columns>
    <columns>LEVEL_5__c</columns>
    <columns>Project_Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>